--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point mt-5 p-rem-t-0.5 liability-outer-secton">
+<div class="page-start-point mt-5 p-rem-r-0.50 liability-outer-secton">
   <form *ngIf="allProjects" [formGroup]="form" autocomplete="off">
     <div class="row" class="users-dashboard p-b-20 min-height parent report">
       <!-- In case of WEB View - design for search Projects, Supplier, Generate Report and amount  -->
