--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -31,7 +31,7 @@
       [ngClass]="isMobile ? 'p-t-5 p-b-10' : 'p-t-10 p-b-20'"
       *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null"
     >
-      <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy p-rem-t-0.5 p-rem-b-0.5' : 'p-t-10 p-b-10'">
+      <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy p-rem-r-0.50 p-rem-r-0.50' : 'p-t-10 p-b-10'">
         <span class="font-size-vary-grn color-grey">
           <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
           {{ rfqData.rfqCurrency.exchangeCurrencyName }}
