--- a/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
+++ b/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
@@ -17,6 +17,6 @@
   </div>
 
   <div [ngClass]="isMobile ? 'mt-4' : 'mt-5'">
-    <button mat-button class="brand-bg-color p-rem-l-3 p-rem-r-3 fontsize-18-px p-rem-b-0.5 p-rem-t-0.5" (click)="cancelSubscription()">Unsubscribe</button>
+    <button mat-button class="brand-bg-color p-rem-l-3 p-rem-r-3 fontsize-18-px p-rem-r-0.50 p-rem-r-0.50" (click)="cancelSubscription()">Unsubscribe</button>
   </div>
 </div>
