--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="finalRfq" [formGroup]="form" (ngSubmit)="submit()">
   <div class="page-start-point mt-5 p-rem-t-1.5">
-    <div class="min-height parent" [ngClass]="isMobile ? 'p-rem-l-0.5 p-rem-r-0.5 p-rem-b-0.5' : 'p-l-20 p-r-20 p-b-20'">
+    <div class="min-height parent" [ngClass]="isMobile ? 'p-rem-r-0.50 p-rem-r-0.50 p-rem-r-0.50' : 'p-l-20 p-r-20 p-b-20'">
       <div class="row m-b-10">
         <div class="col-md-12">
           <div class="row">
