--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -50,7 +50,7 @@
     <ng-container *ngIf="material.projectMaterialList.length">
       <mat-accordion class="accordion-padding-zero" formArrayName="forms">
         <mat-expansion-panel [expanded]="true" [ngClass]="isMobile ? 'mt-2' : ''">
-          <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-rem-t-1.5 p-rem-b-1.5' : ''">
+          <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-rem-t-1.50 p-rem-t-1.50' : ''">
             <mat-panel-title>
               {{ material.projectName }}
               <a href="javascript:void(0)" (click)="openDialog(material)" class="main-color p-l-15"
