--- a/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
+++ b/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
@@ -8,7 +8,7 @@
 <div class="p-rem-t-3 p-rem-b-3 redirections text-align-center">
   <h2 class="font-size-26px mb-3">Do you Really Wish to Unsubscribe This Plan?</h2>
 
-  <div class="shadow-tag p-rem-l-1.5 p-rem-r-1.5 p-t-1-rem p-b-1-rem" [ngClass]="isMobile ? 'w-100' : 'w-75'">
+  <div class="shadow-tag p-rem-l-1.50 p-rem-t-1.50 p-t-1-rem p-b-1-rem" [ngClass]="isMobile ? 'w-100' : 'w-75'">
     We don't want to see you go
     <br />
     we promise security of your data until next payment
