--- a/src/app/shared/dialogs/show-supplier-remarks-documents/show-supplier-remarks-documents.component.html
+++ b/src/app/shared/dialogs/show-supplier-remarks-documents/show-supplier-remarks-documents.component.html
@@ -23,7 +23,7 @@
         <div class="col-md-9 col-sm-7 col-xs-12 suppliers-details">
           <ng-container *ngIf="supplierList[index] && supplierList[index].comments">
             <div class="main-heading">Terms and Conditions</div>
-            <div class="comments-of-supplier p-t-0 p-rem-b-1.5" [innerHTML]="supplierList[index].comments"></div>
+            <div class="comments-of-supplier p-t-0 p-rem-t-1.50" [innerHTML]="supplierList[index].comments"></div>
           </ng-container>
 
           <ng-container *ngIf="supplierList[index] && supplierList[index].documentsList">
