--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -69,7 +69,7 @@
     <div *ngFor="let project of rfqDetails | SearchPipe: searchProject:['projectName']; let p = index" [formGroupName]="p">
       <mat-accordion *ngIf="rfqDetails" class="rfq-detail-body">
         <mat-expansion-panel class="myPanel" [expanded]="true" [ngClass]="isMobile ? 'mt-2' : ''">
-          <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-rem-t-1.5 p-rem-b-1.5' : ''">
+          <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-rem-t-1.50 p-rem-t-1.50' : ''">
             <mat-panel-title>
               {{ project.projectName }}
 
