--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -1,5 +1,5 @@
 <form *ngIf="finalRfq" [formGroup]="form" (ngSubmit)="submit()">
-  <div class="page-start-point mt-5 p-rem-t-1.5">
+  <div class="page-start-point mt-5 p-rem-t-1.50">
     <div class="min-height parent" [ngClass]="isMobile ? 'p-rem-r-0.50 p-rem-r-0.50 p-rem-r-0.50' : 'p-l-20 p-r-20 p-b-20'">
       <div class="row m-b-10">
         <div class="col-md-12">
@@ -122,7 +122,7 @@
       <mat-accordion>
         <ng-template ngFor let-project [ngForOf]="checkedList" let-i="index">
           <mat-expansion-panel class="myPanel" [expanded]="true" [ngClass]="isMobile ? 'mt-2' : ''">
-            <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-rem-t-1.5 p-rem-b-1.5' : ''">
+            <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-rem-t-1.50 p-rem-t-1.50' : ''">
               <mat-panel-title>
                 {{ project.projectName }}
                 <a href="javascript:void(0)" class="main-color p-l-15">
