--- a/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
+++ b/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
@@ -19,7 +19,7 @@
         </div>
       </div>
 
-      <div class="p-rem-t-1.5 p-rem-b-1.5" mat-dialog-actions>
+      <div class="p-rem-t-1.50 p-rem-t-1.50" mat-dialog-actions>
         <div class="col-xs-6">
           <button mat-raised-button class="main-color main-button pull-left" (click)="close(null)">Cancel</button>
         </div>
