--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -2,7 +2,7 @@
   <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()" class="add-project-component-dialog">
     <div class="modal-header">
       <h5 mat-dialog-title class="mb-0">Project Details</h5>
-      <button type="button" class="close" (click)="close()" aria-label="Close">
+      <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
         <span aria-hidden="true">×</span>
       </button>
     </div>
@@ -10,13 +10,15 @@
     <div mat-dialog-content>
       <div class="modal-body">
         <div class="row">
-          <div class="col-md-2 col-sm-2 col-xs-8 image-project-div">
+
+          <!-- upload project image field -->
+          <div class="col-md-2 col-sm-2 col-xs-12 image-project-div">
             <div class="project-profile">
               <img *ngIf="data.detail" [src]="localImg || data.detail.imageUrl || '../../../../assets/images/project-default-image.png'" />
               <img *ngIf="!data.detail" [src]="localImg || '../../../../assets/images/project-default-image.png'" />
             </div>
             <div class="upload-photo-btn browser-method p-t-10">
-              <label class="myLabel">
+              <label class="myLabel photo-btn">
                 <input type="file" accept=".jpg,.jpeg,.png,.webp" title="" (change)="onFileSelect($event)" />
                 <span>Upload</span>
               </label>
@@ -26,25 +28,22 @@
             </div>
           </div>
   
-          <!-- new structure -->
+          <!-- right block contains all fields to create a project -->
           <div class="col-md-10 col-sm-10 col-xs-12 add-edit-form-dialog">
-            <!-- first row -->
             <div class="row">
-              <div class="col-sm-12" [ngClass]="isMobile ? 'pl-2 p-r-0' : '' ">
-                <!-- project Name -->
-                <mat-form-field class="border-input project-name-input w-100">
+
+              <!-- project Name -->
+              <div class="col-md-12 col-sm-12 col-xs-12" [ngClass]="isMobile ? 'pl-2 p-r-0' : '' ">
+                <mat-form-field class="border-input project-name-input width-100">
                   <mat-label>Project Name*</mat-label>
                   <input matInput type="text" formControlName="projectName" />
                 </mat-form-field>
                 <small *ngIf="form.controls['projectName'].hasError('required') && form.controls['projectName'].touched" class="form-error-msg"> Project name is required </small>
               </div>
-            </div>
-  
-            <!-- second row -->
-            <div class="row">
-              <div class="col-sm-6">
-                <!-- address 1 -->
-                <mat-form-field class="border-input w-100">
+            
+              <!-- address 1 -->
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <mat-form-field class="border-input width-100">
                   <mat-label>Address 1*</mat-label>
                   <input matInput type="text" formControlName="addressLine1" />
                   <small *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched" class="form-error-msg"> Address is required </small>
@@ -54,9 +53,9 @@
                 </mat-form-field>
               </div>
   
-              <div class="col-sm-6">
-                <!-- address 2 -->
-                <mat-form-field class="border-input w-100">
+              <!-- address 2 -->
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <mat-form-field class="border-input width-100">
                   <mat-label>Address 2</mat-label>
                   <input matInput type="text" formControlName="addressLine2" />
                   <small *ngIf="form.controls['addressLine2'].hasError('maxlength') && form.controls['addressLine2'].touched" class="form-error-msg">
@@ -64,13 +63,10 @@
                   </small>
                 </mat-form-field>
               </div>
-            </div>
   
-            <!-- fifth row -->
-            <div class="row">
-              <div class="col-sm-6">
-                <!-- country -->
-                <mat-form-field class="border-select mat-form-field-flex-mm-padding m-t-6 w-100">
+              <!-- country -->
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <mat-form-field class="border-select mat-form-field-flex-mm-padding m-t-6 select-country width-100">
                   <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
                     <div class="display-flex">
                       <input
@@ -103,41 +99,35 @@
                 </mat-form-field>
               </div>
   
-              <div class="col-sm-6">
-                <!-- PinCode -->
-                <mat-form-field class="border-input w-100">
+              <!-- PinCode -->
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <mat-form-field class="border-input width-100">
                   <mat-label>Pincode*</mat-label>
                   <input matInput type="text" (input)="getPincode($event)" formControlName="pinCode" />
                   <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched" class="error-msg"> Pincode is required </small>
                   <small *ngIf="form.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)" class="error-msg"> Enter Valid Pincode </small>
                 </mat-form-field>
               </div>
-            </div>
-  
-            <!-- fourth row -->
-            <div class="row">
-              <div class="col-sm-6">
-                <!-- city -->
-                <mat-form-field class="border-input w-100">
+            
+              <!-- city -->
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <mat-form-field class="border-input width-100">
                   <mat-label>City*</mat-label>
                   <input matInput type="string" formControlName="city" />
                 </mat-form-field>
               </div>
-              <div class="col-sm-6">
-                <!-- state value -->
-                <mat-form-field class="border-input w-100">
+
+              <!-- state -->
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <mat-form-field class="border-input width-100">
                   <mat-label>State*</mat-label>
                   <input matInput type="string" formControlName="state" />
                 </mat-form-field>
               </div>
-              <div class="col-sm-6"></div>
-            </div>
-  
-            <!-- fourth row -->
-            <div class="row">
-              <div class="col-xs-6 col-sm-6 date-dialog-add-edit">
-                <!-- start date -->  
-                <mat-form-field class="border-input w-100">
+
+              <!-- project start date -->  
+              <div class="col-md-6 col-sm-6 col-xs-6 date-dialog-add-edit">
+                <mat-form-field class="border-input width-100">
                   <mat-label>Project Start Date*</mat-label>
                   <input matInput [matDatepicker]="startDate" formControlName="startDate" #ref (dateChange)="getStart(ref.value)" (click)="startDate.open()" readonly />
   
@@ -146,10 +136,10 @@
                   <small *ngIf="form.controls['startDate'].hasError('required') && form.controls['startDate'].touched" class="form-error-msg"> Start date is required </small>
                 </mat-form-field>
               </div>
-  
-              <div class="col-xs-6 col-sm-6 date-dialog-add-edit">
-                <!-- end date -->
-                <mat-form-field class="border-input w-100">
+              
+              <!-- project end date -->
+              <div class="col-md-6 col-sm-6 col-xs-6 date-dialog-add-edit">
+                <mat-form-field class="border-input width-100">
                   <mat-label>Project End Date*</mat-label>
                   <input
                     matInput
@@ -167,13 +157,10 @@
                 </mat-form-field>
                 <small *ngIf="sameStartEndDate" class="error-msg sameStartEndDate"> End Date must be greater than Start Date </small>
               </div>
-            </div>
-  
-            <!-- another row -->
-            <div class="row">
-              <div class="col-sm-6">
-                <!-- project Type -->
-                <mat-form-field class="border-select w-100">
+            
+              <!-- project Type -->
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <mat-form-field class="border-select width-100">
                   <mat-label>Project Type*</mat-label>
                   <mat-select formControlName="type">
                     <mat-option *ngFor="let projectType of projectTypes" [value]="projectType.type"> {{projectType.type}} </mat-option>
@@ -182,18 +169,18 @@
                 <small *ngIf="form.controls['type'].hasError('required') && form.controls['type'].touched" class="form-error-msg"> Project type is required </small>
               </div>
   
-              <div class="col-xs-6 col-sm-3">
-                <!-- project area -->
-                <mat-form-field class="border-input w-100">
+              <!-- project area -->
+              <div class="col-md-3 col-sm-3 col-xs-3">
+                <mat-form-field class="border-input width-100 project-area">
                   <mat-label>Area</mat-label>
                   <input matInput type="text" formControlName="area" min="0" appTwoDigitDecimaNumber required />
                   <small *ngIf="form.controls['area'].hasError('required') && form.controls['area'].touched" class="error-msg"> Area is required </small>
                 </mat-form-field>
               </div>
   
-              <div class="col-xs-6 col-sm-3">
-                <!-- project unit -->
-                <mat-form-field class="border-select w-100">
+              <!-- project unit -->
+              <div class="col-md-3 col-sm-3 col-xs-3">
+                <mat-form-field class="border-select width-100">
                   <mat-label>Unit *</mat-label>
                   <mat-select formControlName="unit">
                     <mat-option *ngFor="let unit of units" [value]="unit.value"> {{unit.value}} </mat-option>
@@ -201,13 +188,10 @@
                 </mat-form-field>
                 <small *ngIf="form.controls['unit'].hasError('required') && form.controls['unit'].touched" class="error-msg">Area unit is required </small>
               </div>
-            </div>
-  
-            <!-- sixth row -->
-            <div class="row">
-              <div class="col-xs-6 col-sm-3">
-                <!-- construction cost -->
-                <mat-form-field class="border-input w-100" matTooltip="Construction Cost {{ currencyCode }}">
+        
+              <!-- construction cost -->
+              <div class="col-md-3 col-sm-3 col-xs-6">
+                <mat-form-field class="border-input width-100" matTooltip="Construction Cost {{ currencyCode }}">
                   <mat-label>Construction Cost {{currencyCode}}</mat-label>
                   <input matInput type="text" appTwoDigitDecimaNumber formControlName="cost" min="0" required />
                   <small *ngIf="form.controls['cost'].hasError('required') && form.controls['cost'].touched" class="error-msg"> Construction cost is required </small>
@@ -215,9 +199,9 @@
                 </mat-form-field>
               </div>
   
-              <div class="col-xs-6 col-sm-3">
-                <!-- project area -->
-                <mat-form-field class="border-select w-100">
+              <!-- construction cost unit -->
+              <div class="col-md-3 col-sm-3 col-xs-6">
+                <mat-form-field class="border-select width-100">
                   <mat-label>Unit *</mat-label>
                   <mat-select formControlName="costUnit">
                     <mat-option *ngFor="let unit of costUnits" [value]="unit.value"> {{unit.value}} </mat-option>
@@ -226,9 +210,9 @@
                 <small *ngIf="form.controls['costUnit'].hasError('required') && form.controls['costUnit'].touched" class="error-msg">Cost unit is required </small>
               </div>
   
-              <div class="col-sm-6">
-                <!-- project Type -->
-                <mat-form-field class="border-input w-100">
+              <!-- GSTIN number -->
+              <div class="col-md-6 col-sm-6 col-xs-12">
+                <mat-form-field class="border-input width-100">
                   <mat-label>GSTIN</mat-label>
                   <input matInput type="text" formControlName="gstNo" />
                   <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched" class="form-error-msg"> Enter Valid Gst No</small>
@@ -236,10 +220,9 @@
               </div>
             </div>
           </div>
-          <!-- end structure -->
         </div>
   
-        <div mat-dialog-actions class="d-flex justify-content-end mt-4">
+        <div mat-dialog-actions class="d-flex justify-content-end p-t-20 p-b-20">
           <button mat-raised-button [disabled]="(!imageFileSize && localImg) ? true : (!form.valid || (!validPincode) )" class="main-background-color main-button color-white">
             <span *ngIf="!data.isEdit">Add</span>
             <span *ngIf="data.isEdit">Save</span>
