--- a/src/app/shared/dialogs/video-video/view-video.component.html
+++ b/src/app/shared/dialogs/video-video/view-video.component.html
@@ -1,10 +1,17 @@
-<div class="header-add-edit-dialog">
-  <h1 mat-dialog-title>Material Manager Product Tutorial</h1>
-  <button type="button" class="close" (click)="close()" aria-label="Close">
-    <span aria-hidden="true">×</span>
-  </button>
-</div>
-<div class="col-sm-12  padding-for-dialog-after-header text-align-center" *ngIf="safeURL">
-  <iframe class="buildsupply-material-video" autoplay [src]='safeURL' allowfullscreen frameborder="0">
-  </iframe>
-</div>
+<section class="modal-outer">
+  <div class="modal-header">
+    <h5 mat-dialog-title class="mb-0">Material Manager Product Tutorial</h5>
+    <button type="button" class="close" (click)="close()" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+
+  <div mat-dialog-content>
+    <div class="modal-body">
+      <ng-container *ngIf="safeURL">
+        <iframe class="buildsupply-material-video" autoplay [src]='safeURL' allowfullscreen frameborder="0">
+        </iframe>
+      </ng-container>
+    </div>
+  </div>
+</section>
