--- a/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
+++ b/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
@@ -5,10 +5,10 @@
   </button>
 </div>
 
-<div class="p-rem-t-3 p-rem-b-3 redirections text-align-center">
+<div class="p-rem-t-30 p-rem-b-30 redirections text-align-center">
   <h2 class="font-size-26px mb-3">Do you Really Wish to Unsubscribe This Plan?</h2>
 
-  <div class="shadow-tag p-rem-l-1.50 p-rem-t-1.50 p-t-1-rem p-b-1-rem" [ngClass]="isMobile ? 'w-100' : 'w-75'">
+  <div class="shadow-tag p-rem-t-15 p-rem-t-15 p-t-1-rem p-b-1-rem" [ngClass]="isMobile ? 'w-100' : 'w-75'">
     We don't want to see you go
     <br />
     we promise security of your data until next payment
@@ -17,6 +17,6 @@
   </div>
 
   <div [ngClass]="isMobile ? 'mt-4' : 'mt-5'">
-    <button mat-button class="brand-bg-color p-rem-l-3 p-rem-r-3 fontsize-18-px p-rem-r-0.50 p-rem-r-0.50" (click)="cancelSubscription()">Unsubscribe</button>
+    <button mat-button class="brand-bg-color p-rem-l-30 p-rem-r-30 fontsize-18-px p-rem-r-5 p-rem-r-5" (click)="cancelSubscription()">Unsubscribe</button>
   </div>
 </div>
