--- a/src/app/shared/dialogs/show-documents/show-documents.component.html
+++ b/src/app/shared/dialogs/show-documents/show-documents.component.html
@@ -1,5 +1,5 @@
 <section class="modal-outer">
-  <div class="modal-header">
+  <div class="p-rem-t-15">
     <h5 mat-dialog-title class="mb-0">Attached Documents</h5>
     <button type="button" class="close" (click)="onNoClick()" aria-label="Close">
       <span aria-hidden="true">×</span>
