--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -58,7 +58,7 @@
                         </div>
                         <mat-select-trigger>
                           <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
-                            ><img class="w-30 p-r-10 country-flags" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                            ><img class="width-27-px p-r-10 country-flags" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                             <span class="p-r-5 fontsize-12-px country-symbol">{{ selectedCountry && selectedCountry.countryCode }}</span>
                             <span class="fontsize-12-px text-semi-bold country-extension">{{ selectedCountry && selectedCountry.callingCode }}</span>
                           </span>
