--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -22,7 +22,7 @@
                 </div>
                 <mat-select-trigger>
                   <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}">
-                    <img class="w-30 p-r-5 country-flags" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                    <img class="width-27-px p-r-5 country-flags" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                     <span class="p-r-5 fontsize-12-px">{{ selectedCountry && selectedCountry.countryCode }}</span>
                     <span class="fontsize-12-px">{{ selectedCountry && selectedCountry.callingCode }}</span>
                   </span>
