--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -123,7 +123,7 @@
                     </div>
                     <mat-select-trigger>
                       <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
-                        ><img class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                        ><img class="width-27-px p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                         <span class="p-r-5 fontsize-12-px">{{ selectedCountry && selectedCountry.name }}</span>
                         <!-- <span class="fontsize-12-px text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span> -->
                       </span>
