--- a/src/app/features/subscription-redirections/subscription-redirections.component.html
+++ b/src/app/features/subscription-redirections/subscription-redirections.component.html
@@ -1,9 +1,9 @@
 <app-top-header></app-top-header>
 
-<div class="container p-rem-t-3 p-b-5 redirections">
+<div class="container p-rem-t-30 p-b-5 redirections">
   <div class="row">
     <div class="col-md-8 col-md-offset-2 justify-content-center text-center">
-      <mat-card class="p-rem-t-1.50 p-rem-t-1.50">
+      <mat-card class="p-rem-t-15 p-rem-t-15">
         <ng-container *ngIf="pageType === 0">
           <mat-card-content>
             <img src="../../../assets/images/subs-thanks.png" alt="" />
@@ -13,7 +13,7 @@
               for Choosing <ng-container *ngIf="planName">{{ planName }}</ng-container> Plan
             </h2>
 
-            <div class="shadow-tag p-rem-l-3 p-rem-r-3 p-rem-r-0.50 p-rem-r-0.50">
+            <div class="shadow-tag p-rem-l-30 p-rem-r-30 p-rem-r-5 p-rem-r-5">
               <ng-container *ngIf="userCount">{{ userCount }}</ng-container> Users
             </div>
 
@@ -47,14 +47,14 @@
             <img src="../../../assets/images/subs-unsubscribe.png" alt="" />
             <h2 class="mt-4 mb-4" [ngClass]="isMobile ? 'font-size30' : 'font-size-40px'">Payment Failed</h2>
 
-            <div class="shadow-tag p-rem-l-1.50 p-rem-t-1.50 p-t-1-rem p-b-1-rem" [ngClass]="isMobile ? 'w-100' : 'w-75'">
+            <div class="shadow-tag p-rem-t-15 p-rem-t-15 p-t-1-rem p-b-1-rem" [ngClass]="isMobile ? 'w-100' : 'w-75'">
               Sorry, your payment of <ng-container *ngIf="currencyCode">{{ currencyCode }} </ng-container> <ng-container *ngIf="amount">{{ amount }}</ng-container> had failed.
               <span class="d-block mt-2 mb-2"></span>
               <span class="d-block" [ngClass]="isMobile ? 'ml-1 mr-1' : 'ml-5 mr-5'">Please make sure to update your billing information and try again</span>
             </div>
 
             <div [ngClass]="isMobile ? 'mt-4' : 'mt-5'">
-              <button mat-button class="brand-bg-color p-rem-l-3 p-rem-r-3" [ngClass]="isMobile ? 'fontsize-20-px' : 'font-size-26px'" (click)="gotoMySubscriptions()">
+              <button mat-button class="brand-bg-color p-rem-l-30 p-rem-r-30" [ngClass]="isMobile ? 'fontsize-20-px' : 'font-size-26px'" (click)="gotoMySubscriptions()">
                 Update Details
               </button>
             </div>
@@ -68,7 +68,7 @@
 
             <p class="mt-2 fontsize-20-px">We don't want to see you go</p>
 
-            <div class="shadow-tag p-rem-l-1.50 p-rem-t-1.50 p-rem-r-0.50 p-rem-r-0.50">We promise security of your data until next payment</div>
+            <div class="shadow-tag p-rem-t-15 p-rem-t-15 p-rem-r-5 p-rem-r-5">We promise security of your data until next payment</div>
 
             <div class="mt-4">
               <button mat-flat-button class="brand-color" [ngClass]="isMobile ? 'fontsize-20-px' : 'font-size-26px'">Unsubscribe</button>
@@ -81,13 +81,13 @@
             <img src="../../../assets/images/subs-trial-expiry.png" alt="" />
             <h2 class="mt-4 mb-2" [ngClass]="isMobile ? 'font-size30' : 'font-size-40px'">Free Trial Has Expired</h2>
 
-            <div class="shadow-tag p-rem-l-1.50 p-rem-t-1.50 p-rem-t-1.50 p-rem-t-1.50" [ngClass]="!isMobile ? 'mlr-140px' : ''">
+            <div class="shadow-tag p-rem-t-15 p-rem-t-15 p-rem-t-15 p-rem-t-15" [ngClass]="!isMobile ? 'mlr-140px' : ''">
               Your free trial has expired. We hope, our service were useful to you. We will keep your data and information safe with us.
               <br />To keep continuing our service, please choose any of our subscription plans.
             </div>
 
             <div [ngClass]="isMobile ? 'mt-4' : 'mt-5'">
-              <button mat-button class="brand-bg-color p-rem-l-3 p-rem-r-3" [ngClass]="isMobile ? 'fontsize-20-px' : 'font-size-26px'" (click)="gotoSubscriptions()">
+              <button mat-button class="brand-bg-color p-rem-l-30 p-rem-r-30" [ngClass]="isMobile ? 'fontsize-20-px' : 'font-size-26px'" (click)="gotoSubscriptions()">
                 Choose Plan
               </button>
             </div>
@@ -95,7 +95,7 @@
         </ng-container>
 
         <ng-container *ngIf="pageType !== 3">
-          <div class="p-t-0 p-rem-r-0.50 text-center">
+          <div class="p-t-0 p-rem-r-5 text-center">
             <button mat-button class="brand-color" routerLink="/dashboard">Back to Dashboard</button>
           </div>
         </ng-container>
