--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point p-rem-t-1.50">
+<div class="page-start-point p-rem-t-40">
   <ng-container *ngIf="dataSourceTemp == null || dataSourceTemp == [] || dataSourceTemp.length == 0">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img suppliers">
@@ -97,7 +97,7 @@
                 />
                 <label for="fileDropRef" class="cursor-pointer upload-template">
                   <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" />
-                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer" />
+                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload" class="img-fluid mr-2 width-27-px cursor-pointer" />
                   <a *ngIf="!showResponsiveDesignIcons" style="color: #222222"> Upload Supplier Template </a>
                 </label>
               </div>
@@ -121,7 +121,7 @@
 
           <ng-container matColumnDef="suppliername">
             <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-            <td mat-cell *matCellDef="let element" class="p-rem-r-0.50">
+            <td mat-cell *matCellDef="let element" class="p-rem-r-5">
               <span class="supplier-name">{{ element.supplier_name }}</span>
               <span class="d-block supplier-rates">
                 <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
