--- a/src/app/shared/dialogs/add-address/add-address.component.html
+++ b/src/app/shared/dialogs/add-address/add-address.component.html
@@ -98,7 +98,7 @@
                           class="d-flex selected-country"
                           matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
                         >
-                          <img class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                          <img class="width-27-px p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                           <span class="p-r-5 color-brand font-size16">{{ selectedCountry && selectedCountry.name }}</span>
                         </span>
                       </mat-select-trigger>
