--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -47,7 +47,7 @@
                   <mat-select-trigger>
                     <mat-label class="supplier-country-code">
                       <div matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}">
-                        <img class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                        <img class="width-27-px p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                         <span class="p-r-5 font-size14">{{ selectedCountry && selectedCountry.countryCode }}</span>
                         <span class="font-size14 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
                       </div>
