--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -208,20 +208,20 @@ $sides: (top, bottom, left, right); // Leave this variable alone
     }
 
     .p-rem-#{str-slice($side, 0, 1)}-#{$space} {
-      padding-#{$side}: #{$space}rem !important;
+      padding-#{$side}: #{$space/10}rem !important;
     }
 
-    @for $i from 1 through 100 {
-      .p-rem-#{str-slice($side, 0, 1)}-0\.#{$i} {
-        padding-#{$side}: #{$i / 100}rem !important;
-      }
-    }
+    // @for $i from 1 through 100 {
+    //   .p-rem-#{str-slice($side, 0, 1)}-0\.#{$i} {
+    //     padding-#{$side}: #{$i / 100}rem !important;
+    //   }
+    // }
 
-    @for $i from 1 through 100 {
-      .p-rem-#{str-slice($side, 0, 1)}-1\.#{$i} {
-        padding-#{$side}: #{($i / 100) + 1}rem !important;
-      }
-    }
+    // @for $i from 1 through 100 {
+    //   .p-rem-#{str-slice($side, 0, 1)}-1\.#{$i} {
+    //     padding-#{$side}: #{($i / 100) + 1}rem !important;
+    //   }
+    // }
 
     // @for $i from 1 through 100 {
     //   .p-rem-#{str-slice($side, 0, 1)}-2\.#{$i} {
