--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -1,6 +1,6 @@
 <div class="page-start-point p-rem-t-40">
   <div class="p-l-10 p-r-10 p-b-10 bom-table-style">
-    <card-layout *ngIf="projectData" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
+    <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
 
     <div class="row align-items-center justify-content-between bom-above-tbl-section">
       <div class="col-md-3 col-sm-6 col-xs-12 col-search-input">
