--- a/src/app/features/dashboard/bom/bom.component.html
+++ b/src/app/features/dashboard/bom/bom.component.html
@@ -1,6 +1,6 @@
 <div class="page-start-point p-rem-t-40">
   <div class="p-l-10 p-r-10 p-b-10 min-height bom-main-style">
-    <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
+    <card-layout *ngIf="product" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
 
     <div class="add-to-bom-style">
       <!-- <div class="parent"> -->
